--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- ICON -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="p-r-0">
+<body>
 	<header>
 		<div class="" style="background: #9B26AF;">
 			<div class="container">
