--- a/category.html
+++ b/category.html
@@ -37,11 +37,11 @@
 	</button>
 
 	<header class="pos-rel">
-		<div class="" style="background: #9B26AF;">
+		<div class="bg-purpleb">
 			<div class="container">
 				<div class="row p-t-20">
 					<div class="col-md-3 col-xs-2 col-sm-6">
-						<p class=""><a href="index.html">JUDIT</a></p>
+						<p class="f-30 w-900 c-white"><a href="index.html">BEAUTY</a></p>
 					</div>
 					<div class="col-md-5"></div>
 					<div class="col-md-4 col-xs-10 col-sm-6">
@@ -62,16 +62,16 @@
             <div class="modal-content">
               <div class="modal-header no-bd">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Please Log In,  or <a class=" f-18" data-dismiss="modal"  data-toggle="modal" href='#modal-id1' style="color: #9B26AF;">Sign Up</a></h4>
+                <h4 class="modal-title">Please Log In,  or <a class=" f-18 c-purpleb" data-dismiss="modal"  data-toggle="modal" href='#modal-id1'>Sign Up</a></h4>
               </div>
               <div class="modal-body">
                 
                 <div class="row">
                   <div class="col-xs-6 col-sm-6 col-md-6">
-                    <a href="#" class="btn btn-lg btn-primary btn-block c-white" style="background: #9B26AF;">Facebook</a>
+                    <a href="#" class="btn btn-lg btn-primary btn-block c-white bg-purpleb" >Facebook</a>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6">
-                    <a href="#" class="btn btn-lg btn-info btn-block c-white" style="background: #9B26AF;">Google</a>
+                    <a href="#" class="btn btn-lg btn-info btn-block c-white bg-purpleb" >Google</a>
                   </div>
                 </div>
                 <div class="login-or">
@@ -100,7 +100,7 @@
                       <input type="checkbox">
                       Remember me </label>
                   </div> -->
-                  <button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12" style="color: #9B26AF;">Log In</button>
+                  <button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12 c-purpleb">Log In</button>
                 </form>
               </div>
               <div class="modal-footer no-bd">
@@ -118,7 +118,7 @@
             <div class="modal-content">
               <div class="modal-header no-bd">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Already have an account Please<a class=" f-18" data-dismiss="modal"  data-toggle="modal" href='#modal-id' style="color: #9B26AF;"> Sign In</a></h4>
+                <h4 class="modal-title">Already have an account Please<a class=" f-18 c-purpleb" data-dismiss="modal"  data-toggle="modal" href='#modal-id'> Sign In</a></h4>
               </div>
               <div class="modal-body">
                 
@@ -156,7 +156,7 @@
                       <input type="checkbox">
                       Remember me </label>
                   </div> -->
-                  <button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12" style="color: #9B26AF;">Sign Up</button>
+                  <button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12 c-purpleb">Sign Up</button>
                 </form>
               </div>
               <div class="modal-footer no-bd">
@@ -183,6 +183,7 @@
 							<li class=" m-l-5 m-r-5 c-white"><a href=""><span><i class="fa fa-ellipsis-h" aria-hidden="true"></i></span></a></li>
 						</ul>
 
+						<!-- mobile -->
 						<ul class="p-l-0 small">
 							<li class="active btn-primary mm-t-10 m-l-5 m-r-5 mf-14 p-t-5 p-b-5 p-l-10 p-r-10 bd-4"><a href="">Hair salons</a></li>
 							<li class="btn-primary mm-t-10 m-l-5 m-r-5 mf-14 p-t-5 p-b-5 p-l-10 p-r-10 bd-4"><a href="">Barbers</a></li>
@@ -234,7 +235,7 @@
 							<img src="assets/img/1-5.jpg" class="width-300 mwidth-100p h-200">
 						</div>
 						<div class="col-md-7 col-sm-7">
-							<p class="f-18 w-600" style="color: #9B26AF;"><a href="">Merchandise and Saloon</a></p>
+							<p class="f-18 w-600 c-purpleb"><a href="">Merchandise and Saloon</a></p>
 							<p>1, Oluwo beside golden grace primary school, 112212, Abeokuta, Ogun</p>
 							<div class="row">
 								<div class="col-md-5 col-sm-5">
@@ -243,7 +244,7 @@
 								<div class="col-md-7 col-sm-7">
 									<span class="p-l-20 p-r-10">20min.</span>
 									<span class="p-r-10">₦300.00</span>
-									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12" style="color: #9B26AF;" data-toggle="modal" href='#modal-id2'/>Book now</button></span>
+									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12 c-purpleb" data-toggle="modal" href='#modal-id2'/>Book now</button></span>
 								</div>
 							</div>
 						</div>
@@ -255,7 +256,7 @@
 							<img src="assets/img/max.jpg" class="width-300 mwidth-100p h-200">
 						</div>
 						<div class="col-md-7 col-sm-7">
-							<p class="f-18 w-600" style="color: #9B26AF;"><a href="">Kid Stylist</a></p>
+							<p class="f-18 w-600 c-purpleb"><a href="">Kid Stylist</a></p>
 							<p>Odenike Street treup, 234102, Ora</p>
 							<div class="row">
 								<div class="col-md-5 col-sm-5">
@@ -264,7 +265,7 @@
 								<div class="col-md-7 col-sm-7">
 									<span class="p-l-20 p-r-10">20min.</span>
 									<span class="p-r-10">₦200.00</span>
-									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12" style="color: #9B26AF;">Book now</button></span>
+									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12 c-purpleb">Book now</button></span>
 								</div>
 							</div>
 						</div>
@@ -276,7 +277,7 @@
 							<img src="assets/img/secrets.jpg" class="width-300 mwidth-100p h-200">
 						</div>
 						<div class="col-md-7 col-sm-7">
-							<p class="f-18 w-600" style="color: #9B26AF;"><a href="">lady Stylist</a></p>
+							<p class="f-18 w-600 c-purpleb"><a href="">lady Stylist</a></p>
 							<p>Odenike Street 56, 230102, Ifon</p>
 							<div class="row">
 								<div class="col-md-5 col-sm-5">
@@ -285,7 +286,7 @@
 								<div class="col-md-7 col-sm-7">
 									<span class="p-l-20 p-r-10">20min.</span>
 									<span class="p-r-10">₦500.00</span>
-									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12" style="color: #9B26AF;">Book now</button></span>
+									<span><button type="submit" class="bd-4 bg-but-trans width-80  bs1 hover p-t-5 p-b-5 f-12 c-purpleb">Book now</button></span>
 								</div>
 							</div>
 						</div>
@@ -423,9 +424,6 @@
 	<script type="text/javascript" src="libraries/bootstrap/js/jquery-3.1.1.min.js"></script>
 
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/registrationformvalidation.js"></script>
-    <script type="text/javascript" src="assets/js/signup.js"></script>
-
    <!-- Include Date Range Picker -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 	
@@ -464,10 +462,10 @@
 
 <!-- modal button active change -->
 	<script type="text/javascript">
-	$('button[type="button"]').click(function(){
-    $('button[type="button"].red').removeClass('red')
-        $(this).addClass('red');
-	});
+		$('button[type="button"]').click(function(){
+	    $('button[type="button"].red').removeClass('red')
+	        $(this).addClass('red');
+		});
 	</script>
 </body>
 </html>
