--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 mm-t-10">
+          <div class="col-md-3 col-sm-6 mm-t-10 tm-t-10">
             <div class="hvr-grow pos-rel">
               <img src="assets/img/skincare1.jpg" class="width-230 h-150 mwidth-100p twidth-300" alt="">
               <div class="texthover1">
@@ -533,7 +533,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6 mm-t-10">
+          <div class="col-md-3 col-sm-6 mm-t-10 tm-t-10">
             <div class="hvr-grow pos-rel">
               <img src="assets/img/nailsalon.jpg" class="width-230 h-150 mwidth-100p twidth-300" alt="">
               <div class="texthover1">
